[package]
name = "pgp-keyserver"
version = "0.1.0"
authors = ["root"]
edition = "2018"

[lib]
name = "pgp_keyserver"
path = "src/keyserver.rs"
crate-type = ["cdylib"]


[[bin]]
name = "test"
path = "src/keyserver.rs"

[dependencies]
httparse = {version = "1.3.3"}

log = "0.4"
fluence = { version = "0.1.5", features = ["wasm_logger"] }
